--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -1,3 +1,18 @@
-<li>
-  Aloha
-</li>
+<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+  <li class="nav-item">
+    <a routerLink="/admin" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
+      <i class="nav-icon far fa-image"></i>
+      <p>
+        Úvodní stránka
+      </p>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a routerLink="/admin/page-builder/create" routerLinkActive="active" class="nav-link">
+      <i class="nav-icon fas fa-copy"></i>
+      <p>
+        Vytvořit stránku
+      </p>
+    </a>
+  </li>
+</ul>
