init menu builder

--- a/src/app/admin/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/menu-builder/menu-builder.component.html
@@ -1,1 +1,22 @@
-<p>menu-builder works!</p>
+<div class="card card-primary card-outline card-tabs">
+  <div class="card-header p-0 pt-1 border-bottom-0">
+    <div class="card-header">
+      <h3 class="card-title">Stavební prvky</h3>
+    </div> <!-- /.card-body -->
+    <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="custom-tabs-three-home-tab" data-toggle="pill" href="#custom-tabs-three-home"
+           role="tab" aria-controls="custom-tabs-three-home" aria-selected="true">Bloky stránek</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <div class="tab-content" id="custom-tabs-three-tabContent">
+      <div class="tab-pane fade show active" id="custom-tabs-three-home" role="tabpanel"
+           aria-labelledby="custom-tabs-three-home-tab">
+        test
+      </div>
+    </div>
+  </div>
+  <!-- /.card -->
+</div>
