--- a/src/app/admin/page-builder/page-builder/page-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/page-builder.component.html
@@ -1,36 +1,9 @@
-
 <div class="row">
   <div class="col-md-2">
-    <div class="card card-primary card-outline">
-      <div class="card-header">
-        <h3 class="card-title">Editační prvky</h3>
-      </div> <!-- /.card-body -->
-      <div class="card-body">
-        <p>You can use any font library you like with AdminLTE 3.</p>
-        <strong>Recommendations</strong>
-        <div>
-          <a href="https://fontawesome.com/">Font Awesome</a><br>
-          <a href="https://useiconic.com/open/">Iconic Icons</a><br>
-          <a href="http://ionicons.com/">Ion Icons</a><br>
-        </div>
-      </div><!-- /.card-body -->
-    </div>
+    <app-menu-builder></app-menu-builder>
   </div>
   <div class="col-md-10">
-    <div class="card card-primary card-outline">
-      <div class="card-header">
-        <h3 class="card-title">Editační prvky</h3>
-      </div> <!-- /.card-body -->
-      <div class="card-body">
-        <p>You can use any font library you like with AdminLTE 3.</p>
-        <strong>Recommendations</strong>
-        <div>
-          <a href="https://fontawesome.com/">Font Awesome</a><br>
-          <a href="https://useiconic.com/open/">Iconic Icons</a><br>
-          <a href="http://ionicons.com/">Ion Icons</a><br>
-        </div>
-      </div><!-- /.card-body -->
-    </div>
+    <app-palette-builder></app-palette-builder>
   </div>
 
 </div>
