--- a/src/app/admin/page-builder/palette-builder/palette-builder.component.html
+++ b/src/app/admin/page-builder/palette-builder/palette-builder.component.html
@@ -3,12 +3,12 @@
     <h3 class="card-title">Editační plátno</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <p>You can use any font library you like with AdminLTE 3.</p>
-    <strong>Recommendations</strong>
-    <div>
-      <a href="https://fontawesome.com/">Font Awesome</a><br>
-      <a href="https://useiconic.com/open/">Iconic Icons</a><br>
-      <a href="http://ionicons.com/">Ion Icons</a><br>
+    <div
+      cdkDropList
+      [cdkDropListData]="baseBlocks"
+      class="example-list"
+      (cdkDropListDropped)="drop($event)">
+      <img alt="{{img.id}}" src="{{img.image}}" class="pallete-block" *ngFor="let img of baseBlocks" cdkDrag>
     </div>
   </div><!-- /.card-body -->
 </div>
