connect palette and menu

--- a/src/app/admin/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/menu-builder/menu-builder.component.html
@@ -17,6 +17,7 @@
 
         <div
           cdkDropList
+          [cdkDropListSortingDisabled]=true
           [cdkDropListData]="baseBlocks"
           class="example-list"
           (cdkDropListDropped)="drop($event)">
