--- a/src/app/admin/page-builder/palette-builder/palette-builder.component.css
+++ b/src/app/admin/page-builder/palette-builder/palette-builder.component.css
@@ -3,3 +3,11 @@
   height: 100px;
   margin-bottom: 5px;
 }
+
+/deep/ .palette .cdk-drag-placeholder
+{
+  width: 100%;
+  height: 50px;
+  content:url("http://imgur.com/SZ8Cm.jpg");
+
+}
