--- a/src/app/admin/page-builder/palette-builder/palette-builder.component.html
+++ b/src/app/admin/page-builder/palette-builder/palette-builder.component.html
@@ -6,8 +6,9 @@
 
     <ul
       class="palette-block list-group listing-area clearfix"
+      appSmartPageScroll
       [sortablejs]="baseBlocks"
-      [sortablejsOptions]="{ group: 'shared', scroll: true }">
+      [sortablejsOptions]="{ group: 'shared', scroll: false }">
       <li class="list-group-item palette-item" *ngFor="let item of baseBlocks">
         <p>gegegeg</p>
       </li>
