--- a/src/app/admin/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/menu-builder/menu-builder.component.html
@@ -3,28 +3,31 @@
     <div class="card-header">
       <h3 class="card-title">Stavební prvky</h3>
     </div> <!-- /.card-body -->
-    <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="custom-tabs-three-home-tab" data-toggle="pill" href="#custom-tabs-three-home"
-           role="tab" aria-controls="custom-tabs-three-home" aria-selected="true">Bloky stránek</a>
-      </li>
-    </ul>
+<ul class="nav nav-tabs" id="custom-content-below-tab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="custom-content-below-home-tab" data-toggle="pill" href="#custom-content-below-home"
+       role="tab" aria-controls="custom-content-below-home" aria-selected="true">Bloky</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="custom-content-below-profile-tab" data-toggle="pill" href="#custom-content-below-profile"
+       role="tab" aria-controls="custom-content-below-profile" aria-selected="false">Prvky</a>
+  </li>
+</ul>
   </div>
-  <div class="card-body">
-    <div class="tab-content" id="custom-tabs-three-tabContent">
-      <div class="tab-pane fade show active" id="custom-tabs-three-home" role="tabpanel"
-           aria-labelledby="custom-tabs-three-home-tab">
 
-        <div
-          class="menu-block"
-          [sortablejs]="baseBlocks"
-          [sortablejsOptions]="{ animation: 150, sort: false, group: {name: 'shared',pull: 'clone',put: false} }">
-          <img alt="" src="{{item.image}}" *ngFor="let item of baseBlocks">
-        </div>
-
-
-      </div>
+<div class="tab-content" id="custom-content-below-tabContent">
+  <div class="tab-pane fade active show" id="custom-content-below-home" role="tabpanel"
+       aria-labelledby="custom-content-below-home-tab">
+    <div
+      class="menu-block"
+      [sortablejs]="baseBlocks"
+      [sortablejsOptions]="{ animation: 150, sort: false, group: {name: 'shared',pull: 'clone',put: false} }">
+      <img alt="" src="{{item.image}}" *ngFor="let item of baseBlocks">
     </div>
   </div>
-  <!-- /.card -->
+  <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
+       aria-labelledby="custom-content-below-profile-tab">
+    Aloha
+  </div>
+</div>
 </div>
