--- a/src/app/admin/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/menu-builder/menu-builder.component.html
@@ -27,7 +27,8 @@
   </div>
   <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
        aria-labelledby="custom-content-below-profile-tab">
-    Aloha
+    <div class="menu-element-item"><img src="https://via.placeholder.com/300/000000?text=2"></div>
+    <div class="menu-element-item"><img src="https://via.placeholder.com/300/000000?text=5"></div>
   </div>
 </div>
 </div>
