--- a/src/app/admin/page-builder/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/menu-builder/menu-builder.component.html
@@ -27,8 +27,9 @@
   </div>
   <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
        aria-labelledby="custom-content-below-profile-tab">
-    <div class="menu-element-item"><img src="https://via.placeholder.com/300/000000?text=2"></div>
-    <div class="menu-element-item"><img src="https://via.placeholder.com/300/000000?text=5"></div>
+    <div class="menu-element-item" *ngFor="let menuPluginResolver of abstractMenuPluginResolver">
+      <img appMenuPluginResolver [abstractMenuPluginResolver] = "menuPluginResolver" [src]="menuPluginResolver.getMenuImage()">
+    </div>
   </div>
 </div>
 </div>
