--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-block.component.html
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-block.component.html
@@ -2,5 +2,9 @@
   <div class="block-menu">
     <i class="fas fa-arrows-alt handle"></i>
   </div>
-  <div class="block-content">Test</div>
+  <div #palette_content class="block-content">
+    <div *ngFor="let gridNode of gridNodes" class="grid-stack-item" [attr.data-gs-x]="gridNode.x" [attr.data-gs-y]="gridNode.y" [attr.data-gs-width]="gridNode.width" [attr.data-gs-height]="gridNode.height">
+      aloha
+    </div>
+  </div>
 </div>
