finalize resizeable palette block

--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.css
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.css
@@ -9,6 +9,11 @@
   padding: 0px;
 }
 
+.palette-block.resized
+{
+  cursor: row-resize;
+}
+
 /deep/.palette .palette-block > .sortable-ghost
 {
   width: 100%;
