--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.html
@@ -7,12 +7,13 @@
     <ul
       class="palette-block list-group listing-area clearfix"
       [class.dragged]="isDraggedContent"
+      [class.resized]="isResized"
       appSmartPageScroll
       #palette
       [sortablejs]="baseBlocks"
       [sortablejsOptions]="{ group: 'shared', scroll: false, handle: '.handle' }">
       <li (dragstart)="blockDragStart()" (dragend)="blockDragStop()" class="list-group-item palette-item" *ngFor="let item of baseBlocks">
-        <app-palette-block></app-palette-block>
+        <app-palette-block (resized)="isResized=$event"></app-palette-block>
       </li>
     </ul>
 
