--- a/src/app/admin/page-builder/page-builder/menu-builder/menu-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/menu-builder/menu-builder.component.html
@@ -30,8 +30,8 @@
   </div>
   <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
        aria-labelledby="custom-content-below-profile-tab">
-    <div class="menu-element-item grid-stack-item-menu" *ngFor="let menuPluginResolver of abstractMenuPluginResolver" data-gs-width="1" data-gs-height="1">
-      <img appMenuPluginResolver [abstractMenuPluginResolver] = "menuPluginResolver" [src]="menuPluginResolver.getMenuImage()">
+    <div class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolverMessenger of menuPluginResolverServices.abstractMenuPluginResolverMessenger" data-gs-width="1" data-gs-height="1">
+      <img appMenuPluginResolverDirective [abstractMenuPluginResolverMessenger] = "abstractMenuPluginResolverMessenger" [src]="abstractMenuPluginResolverMessenger.getMenuImage()">
     </div>
   </div>
 </div>
