refactoring menu plugin resolver

--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-block.component.html
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-block.component.html
@@ -3,13 +3,10 @@
     <i class="fas fa-arrows-alt handle"></i>
   </div>
   <div #palette_content class="block-content grid-stack">
-    <div appPaletteBlockGridstackItem *ngFor="let gridNode of gridNodes" class="grid-stack-item" [attr.data-gs-x]="gridNode.x"
-         [attr.data-gs-y]="gridNode.y" [attr.data-gs-width]="gridNode.width" [attr.data-gs-height]="gridNode.height">
-      <div class="grid-stack-item-content">
-        <div>
-          Aloha
-        </div>
-      </div>
-    </div>
+    <app-palette-item class="grid-stack-item" [gridStackNode]="gridNode" *ngFor="let gridNode of gridNodes"
+                      [attr.data-gs-x]="gridNode.x"
+                      [attr.data-gs-y]="gridNode.y" [attr.data-gs-width]="gridNode.width"
+                      [attr.data-gs-height]="gridNode.height"
+    ></app-palette-item>
   </div>
 </div>
