--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-item/palette-item.component.html
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-block/palette-item/palette-item.component.html
@@ -1,3 +1,4 @@
+<div class="edit-buttons btn btn-app"><i class="fas fa-edit"></i>Edit</div>
 <div class="grid-stack-item-content">
   <ng-container #itemTemplate></ng-container>
 </div>
