--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-builder.component.html
@@ -3,6 +3,7 @@
     <h3 class="card-title">Editační plátno</h3>
   </div> <!-- /.card-body -->
   <div class="card-body palette">
+    <app-palette-item-quick-menu></app-palette-item-quick-menu>
 
     <ul
       class="palette-block list-group listing-area clearfix"
