--- a/src/app/admin/page-builder/page-builder/palette-builder/palette-item-quick-menu/palette-item-quick-menu.component.css
+++ b/src/app/admin/page-builder/page-builder/palette-builder/palette-item-quick-menu/palette-item-quick-menu.component.css
@@ -1,10 +1,9 @@
-.edit-buttons {
-  position: absolute;
-  top: -38px;
-  right: -1px;
-  opacity: 1;
-  transition: opacity 0.5s;
+:host {
+  transition: top 0.5s, left 0.5s;
   z-index: 999999999;
+  position: absolute;
+  display: none;
+  text-align: center;
 }
 
 .btn-app {
@@ -14,16 +13,12 @@
   color: #6c757d;
   font-size: 12px;
   height: 37px;
-  margin: 0 0 10px 10px;
+  margin: 0 0 0 0;
   min-width: 42px;
   padding: 4px 0px;
-  position: absolute;
   text-align: center;
 }
 
-:host:hover > .edit-buttons {
-  opacity: 1;
-}
 
 :host > .edit-buttons > i {
   font-size: 12px;
