refactoring + install ngmodal

--- a/src/app/plugins/base-admin/admin/admin.component.html
+++ b/src/app/plugins/base-admin/admin/admin.component.html
@@ -1,3 +1,5 @@
-<div>bázova admin</div>
+<p>menu</p>
+<ng-template #content let-modal>
+  <router-outlet></router-outlet>
+</ng-template>
 
-<router-outlet></router-outlet>
