bootstrap for modal

--- a/src/app/admin/page-builder/page-builder/page-builder.component.html
+++ b/src/app/admin/page-builder/page-builder/page-builder.component.html
@@ -6,7 +6,7 @@
     <app-palette-builder></app-palette-builder>
   </div>
 
-  <router-outlet></router-outlet>
+  <app-modal-for-route></app-modal-for-route>
 
 </div>
 
