--- a/src/app/core/components/modal-for-route/modal-for-route.component.html
+++ b/src/app/core/components/modal-for-route/modal-for-route.component.html
@@ -1,5 +1,5 @@
 <div #modalContent class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">{{title}}</h5>
@@ -9,10 +9,6 @@
       </div>
       <div class="modal-body">
         <router-outlet></router-outlet>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
