--- a/src/app/plugins/modules/base-admin-layout/components/admin/admin.component.html
+++ b/src/app/plugins/modules/base-admin-layout/components/admin/admin.component.html
@@ -1,5 +1,45 @@
-<p>menu</p>
+<div class="container">
+  <div class="row">
+    <div class="col col-menu">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <li class="nav-item">
+          <a routerLink="/admin" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
+            <i class="nav-icon far fa-image"></i>
+            <p>
+              Úvodní stránka
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/admin/page-builder/create" routerLinkActive="active" class="nav-link">
+            <i class="nav-icon fas fa-copy"></i>
+            <p>
+              Vytvořit stránku
+            </p>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-9">
+      <div class="card card-primary card-outline">
+        <div class="card-body">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="dialog-buttons">
+    <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Zrušit</button>
+    <button type="button" class="btn btn-primary save-button">Uložit</button>
+  </div>
+</div>
 
-  <router-outlet></router-outlet>
+
+
+
+
+
+
+
 
 
