first async validation

--- a/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
+++ b/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
@@ -1,6 +1,6 @@
-<form action="../../index.html" method="post">
+<form [formGroup]="registrationForm">
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Full name">
+    <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
     <div class="input-group-append">
       <div class="input-group-text">
         <span class="fas fa-user"></span>
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="input-group mb-3">
-    <input type="email" class="form-control" placeholder="Email">
+    <input type="email" class="form-control" placeholder="Email" formControlName="email">
     <div class="input-group-append">
       <div class="input-group-text">
         <span class="fas fa-envelope"></span>
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="input-group mb-3">
-    <input type="password" class="form-control" placeholder="Password">
+    <input type="password" class="form-control" placeholder="Heslo" formControlName="passwordFirst">
     <div class="input-group-append">
       <div class="input-group-text">
         <span class="fas fa-lock"></span>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="input-group mb-3">
-    <input type="password" class="form-control" placeholder="Retype password">
+    <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="passwordSecond">
     <div class="input-group-append">
       <div class="input-group-text">
         <span class="fas fa-lock"></span>
@@ -42,7 +42,7 @@
     </div>
     <!-- /.col -->
     <div class="col-4">
-      <button type="submit" class="btn btn-primary btn-block">Register</button>
+      <button type="submit" (click)="sendForm()" class="btn btn-primary btn-block">Zaregistrovat</button>
     </div>
     <!-- /.col -->
   </div>
