--- a/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
+++ b/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registrationForm">
+<form (ngSubmit)="sendForm()" [formGroup]="registrationForm">
   <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
     <div class="input-group-append">
@@ -42,7 +42,7 @@
     </div>
     <!-- /.col -->
     <div class="col-4">
-      <button type="submit" (click)="sendForm()" class="btn btn-primary btn-block">Zaregistrovat</button>
+      <button type="submit" class="btn btn-primary btn-block">Zaregistrovat</button>
     </div>
     <!-- /.col -->
   </div>
