--- a/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
+++ b/frontend/src/app/admin/entry-route/authorization-component/registration/registration.component.html
@@ -1,34 +1,42 @@
 <form [formGroup]="registrationForm">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
-    <div class="input-group-append">
-      <div class="input-group-text">
-        <span class="fas fa-user"></span>
+  <div appFormError class="form-group">
+    <div #errorFormContainer class="input-group">
+      <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
+      <div class="input-group-append">
+        <div class="input-group-text">
+          <span class="fas fa-user"></span>
+        </div>
       </div>
     </div>
   </div>
-  <div class="input-group mb-3">
+  <div appFormError class="form-group">
+    <div #errorFormContainer class="input-group">
       <input type="email" class="form-control" placeholder="Email" formControlName="email">
       <div class="input-group-append">
         <div class="input-group-text">
           <span class="fas fa-envelope"></span>
         </div>
       </div>
+    </div>
   </div>
   <div formGroupName="password">
-    <div class="input-group mb-3">
-      <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
-      <div class="input-group-append">
-        <div class="input-group-text">
-          <span class="fas fa-lock"></span>
+    <div appFormError class="form-group">
+      <div #errorFormContainer class="input-group">
+        <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
+        <div class="input-group-append">
+          <div class="input-group-text">
+            <span class="fas fa-lock"></span>
+          </div>
         </div>
       </div>
     </div>
-    <div class="input-group mb-3">
-      <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
-      <div class="input-group-append">
-        <div class="input-group-text">
-          <span class="fas fa-lock"></span>
+    <div appFormError class="form-group">
+      <div #errorFormContainer class="input-group">
+        <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
+        <div class="input-group-append">
+          <div class="input-group-text">
+            <span class="fas fa-lock"></span>
+          </div>
         </div>
       </div>
     </div>
