--- a/frontend/src/app/core/directives/form-error/tools/components/error-message/error-message.component.html
+++ b/frontend/src/app/core/directives/form-error/tools/components/error-message/error-message.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let errorKey of objectKeys(errors)">
-  <div>{{errors[errorKey]}}</div>
+  <div class="validation-error-message small">{{errors[errorKey]}}</div>
 </div>
