--- a/frontend/src/app/admin/entry-route/authorization-component/login-component/login.component.html
+++ b/frontend/src/app/admin/entry-route/authorization-component/login-component/login.component.html
@@ -1,48 +1,28 @@
-<form action="../../index.html" method="post">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Full name">
-    <div class="input-group-append">
-      <div class="input-group-text">
-        <span class="fas fa-user"></span>
+<form [formGroup]="loginForm">
+  <div appFormError class="form-group">
+    <div #errorFormContainer class="input-group">
+      <input type="email" class="form-control" placeholder="Email" formControlName="email">
+      <div class="input-group-append">
+        <div class="input-group-text">
+          <span class="fas fa-envelope"></span>
+        </div>
       </div>
     </div>
   </div>
-  <div class="input-group mb-3">
-    <input type="email" class="form-control" placeholder="Email">
-    <div class="input-group-append">
-      <div class="input-group-text">
-        <span class="fas fa-envelope"></span>
-      </div>
-    </div>
-  </div>
-  <div class="input-group mb-3">
-    <input type="password" class="form-control" placeholder="Password">
-    <div class="input-group-append">
-      <div class="input-group-text">
-        <span class="fas fa-lock"></span>
-      </div>
-    </div>
-  </div>
-  <div class="input-group mb-3">
-    <input type="password" class="form-control" placeholder="Retype password">
-    <div class="input-group-append">
-      <div class="input-group-text">
-        <span class="fas fa-lock"></span>
+  <div appFormError class="form-group">
+    <div #errorFormContainer class="input-group">
+      <input type="password" class="form-control" placeholder="Heslo" formControlName="password">
+      <div class="input-group-append">
+        <div class="input-group-text">
+          <span class="fas fa-lock"></span>
+        </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-8">
-      <div class="icheck-primary">
-        <input type="checkbox" id="agreeTerms" name="terms" value="agree">
-        <label for="agreeTerms">
-          I agree to the <a href="#">terms</a>
-        </label>
-      </div>
-    </div>
     <!-- /.col -->
-    <div class="col-4">
-      <button type="submit" class="btn btn-primary btn-block">Register</button>
+    <div class="col-4 offset-md-8">
+      <button type="submit" class="btn btn-primary btn-block">Přihlásit</button>
     </div>
     <!-- /.col -->
   </div>
