--- a/frontend/src/app/admin/entry-route/administration-component/administration.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/administration.component.html
@@ -115,10 +115,41 @@
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
+      <li class="dropdown user user-menu">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <img
+            class="user-image"
+            ngxGravatar
+            [email]="'example@mail.com'"
+            size="30"
+          />
+          <span class="hidden-xs">Alexander Pierce</span>
         </a>
+        <ul class="dropdown-menu">
+          <!-- User image -->
+          <li class="user-header">
+            <img
+              ngxGravatar
+              [email]="'example@mail.com'"
+              class="img-circle"
+              size="50"
+            />
+
+            <p>
+              Alexander Pierce - Web Developer
+              <small>Member since Nov. 2012</small>
+            </p>
+          </li>
+          <!-- Menu Footer-->
+          <li class="user-footer">
+            <div class="float-left">
+              <a href="#" class="btn btn-default btn-flat">Profile</a>
+            </div>
+            <div class="float-right">
+              <button (click)="logout()"  class="btn btn-default btn-flat">Sign out</button>
+            </div>
+          </li>
+        </ul>
       </li>
     </ul>
   </nav>
@@ -135,16 +166,6 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="assets/admin_lte/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
-        </div>
-      </div>
-
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <app-menu></app-menu>
