--- a/frontend/src/app/admin/entry-route/administration-component/menu-component/menu.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/menu-component/menu.component.html
@@ -8,6 +8,14 @@
     </a>
   </li>
   <li class="nav-item">
+    <a routerLink="web/list" routerLinkActive="active" class="nav-link">
+      <i class="nav-icon fas fa-copy"></i>
+      <p>
+        Moje weby
+      </p>
+    </a>
+  </li>
+  <li class="nav-item">
     <a routerLink="/admin/page-builder/create" routerLinkActive="active" class="nav-link">
       <i class="nav-icon fas fa-copy"></i>
       <p>
