--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
@@ -3,33 +3,21 @@
     <h3 class="card-title">Seznam vytvořených webů</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <table mat-table [dataSource]="dataSource">
-
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
+    <table mat-table [dataSource]="dataToTable">
 
       <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef>Název webu</th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
       </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          <i class="material-icons">settings</i>nastavení |
+          <i class="material-icons">list</i>stránky webu |
+          <a [routerLink]="" (click)="openRemoveWebDialog(element.id)" class="text-danger"><i class="material-icons">delete</i>smazat</a>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
