--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/tools/components/remove-web-dialog/remove-web-dialog.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/tools/components/remove-web-dialog/remove-web-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Smazání webu</h1>
 <div mat-dialog-content>Opravdu si přejete smazat celý web se všemi stránkami?</div>
-<mat-dialog-actions>
+<mat-dialog-actions class="float-right">
   <button mat-button mat-dialog-close>Zrušit</button>
   <button mat-button [mat-dialog-close]="true">Odstranit</button>
 </mat-dialog-actions>
