--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
@@ -16,7 +16,7 @@
         <td mat-cell *matCellDef="let element" class="text-right">
           <i class="material-icons">settings</i>nastavení |
           <i class="material-icons">list</i>stránky webu |
-          <a [routerLink]="" (click)="openRemoveWebDialog(element.id)" class="text-danger"><i class="material-icons">delete</i>smazat</a>
+          <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i class="material-icons">delete</i>smazat</a>
         </td>
       </ng-container>
 
