--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
@@ -16,13 +16,20 @@
         <td mat-cell *matCellDef="let element" class="text-right">
           <i class="material-icons">settings</i>nastavení |
           <i class="material-icons">list</i>stránky webu |
-          <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i class="material-icons">delete</i>smazat</a>
+          <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
+            class="material-icons">delete</i>smazat</a>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <div class="container-fluid mt-3">
+      <div class="row justify-content-end">
+        <button routerLink="../create" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat web
+        </button>
+      </div>
+    </div>
   </div><!-- /.card-body -->
 </div>
 
