--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-create/web-create.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-create/web-create.component.html
@@ -7,7 +7,7 @@
       <input type="text" class="form-control" placeholder="Název webu" formControlName="name">
       <div class="container-fluid mt-3">
         <div class="row justify-content-end">
-          <button routerLink="../list" mat-button>Zpět na výpis webů</button>
+          <a [routerLink]="route.snapshot.url[0].path === 'create' ? ['../list'] : ['../../list']" [replaceUrl]="true" mat-button>Zpět na seznam webů</a>
           <button type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
           </button>
         </div>
