--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-list/web-list.component.html
@@ -14,7 +14,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-right">
-          <i class="material-icons">settings</i>nastavení |
+          <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
           <i class="material-icons">list</i>stránky webu |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
             class="material-icons">delete</i>smazat</a>
