--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-create/web-create.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/web-component/web-create/web-create.component.html
@@ -3,7 +3,8 @@
     <h3 class="card-title">Vytvořit web</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <form [formGroup]="createWebForm">
+    <form [formGroup]="createWebForm" appGlobalFormError>
+      <ng-container #globalFormErrors></ng-container>
       <input type="text" class="form-control" placeholder="Název webu" formControlName="name">
       <div class="container-fluid mt-3">
         <div class="row justify-content-end">
