--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/page-component/page-list/page-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/page-component/page-list/page-list.component.html
@@ -1,1 +1,37 @@
-<p>page-list works!</p>
+<div class="card card-primary card-outline">
+  <div class="card-header">
+    <h3 class="card-title">Seznam vytvořených stránek</h3>
+  </div> <!-- /.card-body -->
+  <div class="card-body">
+    <table mat-table [dataSource]="dataToTable">
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Název stránky</th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
+        <td mat-cell *matCellDef="let element" class="text-right">
+          <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
+          <a [routerLink]="['../../page-builder', element.id, 'list']"><i class="material-icons">list</i>Editace webu</a> |
+          <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
+            class="material-icons">delete</i>smazat</a>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <div class="container-fluid mt-3">
+      <div class="row justify-content-end">
+        <button [routerLink]="['../create']" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat stránku
+        </button>
+      </div>
+    </div>
+  </div><!-- /.card-body -->
+</div>
+
+
+
