--- a/frontend/src/app/admin/entry-route/administration-component/admin-component/page-component/page-list/page-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration-component/admin-component/page-component/page-list/page-list.component.html
@@ -15,7 +15,7 @@
         <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-right">
           <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
-          <a [routerLink]="['../../page-builder', element.id, 'list']"><i class="material-icons">list</i>Editace webu</a> |
+          <a [routerLink]="['../page-builder', element.id]"><i class="material-icons">list</i>Editace stránky</a> |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
             class="material-icons">delete</i>smazat</a>
         </td>
@@ -26,6 +26,7 @@
     </table>
     <div class="container-fluid mt-3">
       <div class="row justify-content-end">
+        <a routerLink="../../../web/list"  mat-button>Zpět na seznam webů</a>
         <button [routerLink]="['../create']" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat stránku
         </button>
       </div>
