--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
@@ -3,7 +3,7 @@
     <app-menu-builder></app-menu-builder>
   </div>
   <div class="col-md-10">
-    <app-palette-builder></app-palette-builder>
+    <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
   </div>
 
   <app-modal-for-route></app-modal-for-route>
