--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
@@ -1,4 +1,4 @@
-<button class="save-builder" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit úpravy
+<button class="save-builder" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit úpravy
 </button>
 <div class="row">
   <div class="col-md-2">
