--- a/frontend/src/app/plugins/base-admin/admin/admin.component.html
+++ b/frontend/src/app/plugins/base-admin/admin/admin.component.html
@@ -2,19 +2,11 @@
   <div class="row">
     <div class="col col-menu">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-        <li class="nav-item">
-          <a routerLink="/admin" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
+        <li class="nav-item" *ngFor="let menuLabel of menuLabels">
+          <a routerLink="{{menuLabel.path}}" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
             <i class="nav-icon far fa-image"></i>
             <p>
-              Úvodní stránka
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/admin/page-builder/create" routerLinkActive="active" class="nav-link">
-            <i class="nav-icon fas fa-copy"></i>
-            <p>
-              Vytvořit stránku
+              {{menuLabel.label}}
             </p>
           </a>
         </li>
