--- a/frontend/src/app/plugins/base-admin/admin/plugin-admin.component.html
+++ b/frontend/src/app/plugins/base-admin/admin/plugin-admin.component.html
@@ -21,8 +21,7 @@
     </div>
   </div>
   <div class="dialog-buttons">
-    <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Zrušit</button>
-    <button type="button" class="btn btn-primary save-button">Uložit</button>
+    <button type="button" (click)="submitAdminSettings()" class="btn btn-primary save-button">Hotovo</button>
   </div>
 </div>
 
