--- a/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
+++ b/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
@@ -2,8 +2,7 @@
   <div *ngIf="pluginAdminComponent.menuSelected === 'text-settings'" appInputFormErrorGrouper="text-settings">
     <div>
       <label for="text">Text:</label>
-      <textarea appFormError id="text" formControlName="text">
-      </textarea>
+      <input appFormError id="text" formControlName="text">
     </div>
   </div>
 </form>
