--- a/frontend/src/app/admin/entry-route/administration/administration.component.html
+++ b/frontend/src/app/admin/entry-route/administration/administration.component.html
@@ -9,12 +9,6 @@
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
-      </li>
     </ul>
 
     <!-- SEARCH FORM -->
@@ -33,10 +27,13 @@
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="far fa-comments"></i>
-          <span class="badge badge-danger navbar-badge">3</span>
-        </a>
+        <div class="nav-link">
+                    <mat-form-field appearance="legacy">
+                      <mat-select [(value)]="selectedWeb">
+                        <mat-option [value]="option.id" *ngFor="let option of websSelect">{{ option.name }}</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+        </div>
         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
