--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/web/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/web/web-list/web-list.component.html
@@ -14,8 +14,8 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-right">Akce</th>
         <td mat-cell *matCellDef="let element" class="text-right">
+          <a class="text-primary" (click)="switchToWeb(element.id)"><i class="material-icons">sync</i>Přepnout se na web</a> |
           <a [routerLink]="['../update', element.id]"><i class="material-icons">settings</i>nastavení</a> |
-          <a [routerLink]="['../../page', element.id, 'list']"><i class="material-icons">list</i>stránky webu</a> |
           <a (click)="openRemoveWebDialog(element.id)" class="text-danger"><i
             class="material-icons">delete</i>smazat</a>
         </td>
