--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/web/web-list/web-list.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/web/web-list/web-list.component.html
@@ -1,6 +1,10 @@
 <div class="card card-primary card-outline">
   <div class="card-header">
     <h3 class="card-title">Seznam vytvořených webů</h3>
+    <br>
+    <p class="small text-danger" *ngIf="webListGuard.isBlocked">
+      Pro pokračování je nutné vytvořit alespoň jeden web.
+    </p>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <table mat-table [dataSource]="dataToTable">
