Modify admin menu

--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/page-builder.component.html
@@ -8,7 +8,7 @@
     <app-palette-builder [pageDetail]="pageDetail"></app-palette-builder>
   </div>
 
-  <app-modal-for-route></app-modal-for-route>
+  <app-moveable-settings></app-moveable-settings>
 
 </div>
 
