--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/palette-builder/palette-builder.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/page-builder/palette-builder/palette-builder.component.html
@@ -17,7 +17,5 @@
         <app-palette-block [pageBlock]="item" (resized)="isResized=$event"></app-palette-block>
       </li>
     </ul>
-
-
-  </div><!-- /.card-body -->
+  </div>
 </div>
