--- a/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
+++ b/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
@@ -1,11 +1,4 @@
-<form [formGroup]="adminForm">
-  <div *ngIf="pluginAdminComponent.menuSelected === 'text-settings'" appInputFormErrorGrouper="text-settings">
-    <div>
-      <label for="text">Text:</label>
-      <input appFormError id="text" formControlName="text">
-    </div>
-  </div>
-</form>
+<p>It works Admin</p>
 
 
 
